# cpp-testing

Calculator/: CMakeLists.txt
Calculator/src/: main.cpp
Calculator/src/arithmetics/: operations.h
Calculator/src/calculator/: arithmetics.h
tests/: CMakeLists.txt  test.cpp
